# yunyun-faithful-english-patch

./: .gitignore  CONTRIBUTING_LICENSE.md  CREDITS.md  LICENSE.md  LICENSE_SUMMARY_JA.md  NOTICE.md  README.md  RIGHTSHOLDER_PERMISSION.md  THIRD_PARTY_NOTICES.md  TRANSLATION_FEEDBACK.md  pyproject.toml
.github/: check_repository_files.py
.github/DISCUSSION_TEMPLATE/: translation-suggestions.yml
.github/ISSUE_TEMPLATE/: config.yml  patch_bug.yml  runtime_text_bug.yml
.github/workflows/: ci.yml  publish-release.yml  release.yml
LICENSES/: CC-BY-NC-SA-4.0.txt  MIT.txt
src/yunyun_faithful_english_patch/: __init__.py  __main__.py  constants.py  errors.py  extract.py  game.py  patch.py  patching.py  translations.py  unityfs.py
tests/: test_backup_safety.py  test_cleanup_retry.py
translations/: story.en.json  strings.en.json
